--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -1,11 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-    <body>
-    <!--Add a registration form here -->
-    </body>
-</html>
+{%extends 'djangoapp/layout.html'%}
+
+{% block content%}
+
+<p>Registration page.</p>
+
+<!-- which 'message' is the referring to? error message? -->
+{% if message %}
+    <div>{{ message }}</div>
+{% endif %}
+
+<form action="{% url 'djangoapp:registration' %}" method="post">
+    {% csrf_token %}
+    <div class="form-group">
+        <input class="form-control" autofocus type="text" name="firstname" placeholder="First Name">
+    </div>
+    <div class="form-group">
+        <input class="form-control" autofocus type="text" name="lastname" placeholder="Last Name">
+    </div>
+    <div class="form-group">
+        <input class="form-control" autofocus type="text" name="username" placeholder="Username">
+    </div>
+    <div class="form-group">
+        <input class="form-control" type="email" name="email" placeholder="Email Address">
+    </div>
+    <div class="form-group">
+        <input class="form-control" type="password" name="password" placeholder="Password">
+    </div>
+    <div class="form-group">
+        <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+    </div>
+    <input class="btn btn-primary" type="submit" value="Register">
+</form>
+
+    Already have an account? <a href="{% url 'djangoapp:login' %}">Login here</a>
+
+{% endblock %}
