--- a/server/djangoapp/templates/djangoapp/navbar.html
+++ b/server/djangoapp/templates/djangoapp/navbar.html
@@ -16,6 +16,13 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'djangoapp:financing' %}">Financing</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'djangoapp:dealerdata' %}">DealerData</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'djangoapp:dealerdataID' %}">DealerByID</a>
+        </li>
+
           {% if request.user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="#">Signed in as {{request.user}}</a>
