--- a/server/djangoapp/templates/djangoapp/getdealerdata.html
+++ b/server/djangoapp/templates/djangoapp/getdealerdata.html
@@ -17,6 +17,31 @@
     {% endfor %}
 </ul> -->
 
-<ul> {{dealerdata}} </ul>
+<!-- <ul> {{dealerdata}} </ul> -->
+
+<table class="table" id="table">
+    <thead>
+        <tr>
+            <th data-field="id">ID</th>
+            <th data-field="dealername">Dealer Name</th>
+            <th data-field="city">City</th>
+            <th data-field="address">Address</th>
+            <th data-field="zip">Zip</th>
+            <th data-field="state">State</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for dealer in dealerdata %}
+            <tr>
+                <td>{{dealer.id}}</td>
+                <td><a href="{ url 'djangoapp:dealer_details' dealer.id %}">{{dealer.full_name}}</a></td>
+                <td>{{dealer.city}}</td>
+                <td>{{dealer.address}}</td>
+                <td>{{dealer.zip}}</td>
+                <td>{{dealer.st}}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
 
 {% endblock %}
